--- a/contact me.html
+++ b/contact me.html
@@ -7,9 +7,8 @@
   <body>
   <ul>
     <h1>Contact Details</h1>
-    <li>Email: Dont Worry About It</li>
-    <li>Phone: Nope</li>
-    <li>Address: Dont Even Think About It</li>
+    <li>Email: An Email</li>
+    <li>Phone: A Phone Number</li>
   </ul>
   <hr>
   <form action="mailto:xfit001@gmail.com" method="post" enctype="text/plain">
