--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td><img src="Tomoe.jpg" alt="Tomoe"></td>
-      <td><h1>Mr. Scott</h1>
+      <td><h1>My Site</h1>
         <p><em>Founder Of This Website</em></p>
         <p>I am a web developer. Coffee is key!</td>
     </tr>
