--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>😉My Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
+
 </head>
 
 <body>
@@ -51,7 +54,7 @@
       <tr>
         <td>Web Development</td>
         <td>⭐⭐⭐⭐⭐</td>
-        <td>Painting</td>
+        <td>Landscaping</td>
         <td>⭐⭐⭐⭐⭐</td>
       </tr>
     </thead>
