--- a/hobbies.html
+++ b/hobbies.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>My Hobbies</title>
+      <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3>My Hobbies</h3>
     <ol>
-      <li><a href="https://www.tripadvisor.com/Attractions-g28961-Activities-c36-t133-South_Carolina.html">Beer Brewery</a></li>
-      <li><a href="https://en.wikipedia.org/wiki/Martial_arts">Martial Arts</a></li>
+      <li><a href="https://golf.com/">Golf</a></li>
+      <li><a href="https://www.youtube.com/watch?v=sB2cseS0u1Q">Martial Arts</a></li>
       <li><a href="https://motorcyclesportworld.com/new-15-best-cruiser-motorcycles-in-2022-with-reviews-for-each/">Motorcycles</a></li>
     </ol>
   </body>
